2006-04-18    <jeff@mini.nerble.net>

	* pathfinder/Zombie.cc: Straight-line pathfinder now works in
	3-dimensions, and combat projectile code allows shooting things at
	any height.

2006-04-07    <jeff@mini.nerble.net>

	* combat.cc: Support 'summon' by certain monsters (mages,
	liches).  Also added teleport, summon, and can-be-invisible flag
	support to ExultStudio and to savegames.

2006-04-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated documentation and FAQ
	* docs/ReadMe.html,FAQ.html: updated documentation and FAQ
	* Readme, FAQ: updated

2006-04-05    <jeff@mini.nerble.net>

	* objs/objs.cc: Handle changes to IFIX and terrain objects
	correctly so the changes get saved by EStudio.

2006-03-19  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc: Fixed incorrect return value of data size for written strings.

2006-03-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc, schedule.h: Tweaked the 'Pace' schedules. Also, greatly
	  modified the 'Patrol' schedule so that it works more like the original.
	* combat.cc: Slightly midified the way opponents are found in combat.
	  Hostile actors will now target friendly actors, which include party
	  members.
	* actors.cc: Oppressors are now set when an NPC's target is set. Also,
	  they are set when an NPC is attacked instead of when it is hurt.
	  Additionally, the avatar will now set the 'blocked' vector if it is
	  moving due to a schedule.
	* actors.cc, usecode/bgintrinsics.h: Allowed several more SI intrinsics
	  for BG; specifically, the intrinsics add_cont_items, clear_item_say,
	  save_pos, teleport_to_saved_pos, set_camera, set_polymorph and
	  infravision can now be used in BG games.
	* usecode/intrinsics.cc: Added reminder to look into 'approach_avatar'
	  intrinsic (seems to actually be 'create_offscreen', but I need to do
	  some further tests to be sure).
	* docs/exult_intrinsics.txt: Full intrinsic documentation describing